bread-lemonade/beertime_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kek-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 8080
